align services boxes correctly on mobile

--- a/codebase/static/css/services.css
+++ b/codebase/static/css/services.css
@@ -113,6 +113,10 @@
       flex-direction: column;
   }
 
+  .service-box {
+      margin: auto;
+  }
+
   .services-content {
       margin-left: 0px;
       margin-right: 0px;
